# chulengo

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  meson.build  pyproject.toml  requirements.txt  setup.py  wasm32.ini
chulengo/: __init__.py  array.py  boundary.py  chlib.py  linear.py  notebook.py  ras.py  solver.py  spatial.py  typing.py  xs.py
chulengo/kinematic/: boundary.py  method.py  notebook.py  results.py  solver.py
chulengo/shallow/: results.py
chulengo/xs/: compound.py  rect.py
docs/: conf.py  conservation.rst  fvmethod.rst  index.rst  kinematic.rst  shallow.rst
docs/chlib/: crosssection.rst  errors.rst  glib.rst  index.rst
docs/fvm/: fvm.rst  limiters.rst  linear.rst  nonlinear.rst
docs/start/: index.rst  linux.md  windows.md
examples/: CMakeLists.txt  EX1.RM0.2.yaml  kinematic MC.ipynb  kinematic upwind.ipynb  linear shallow water.ipynb  linear sw MC.ipynb  linear sw upwind.ipynb  rm0.2.c  rm0.2.py
examples/EX1/: CMakeLists.txt  EX1.RM0.2.json  rm0.2.c  rm0.2.py  rm0.2coords.c  rm0.2subsect.c
examples/beavcrek/: BEAVCREK.RM5.0.json  BEAVCREK.g01  beavcrek.rm5.0.py
examples/critcrek/: critcrek.rm1.0.py
examples/xs/: CMakeLists.txt  simple_rect.ipynb  triangles.c  triangles.json  xs.py
include/: chl.h  chlib.h  chulengo.h
include/chulengo/: chlerror.h  chlxscoords.h  cxscoords.h
src/: cerror.c  ch_arr_dbl.h  ch_io.h  ch_xs.h  ch_xs_coords.c  ch_xs_coords.h  ch_xs_coords.test.cpp  ch_xs_def.c  ch_xs_def.test.cpp  ch_xs_subdiv.c  ch_xs_subdiv.h  ch_xs_subdiv.test.cpp  ch_xs_subsect.c  ch_xs_subsect.h  ch_xs_subsect.test.cpp  chlerror.c  chlmem.c  chlxscoords.c  cxscoords.c  meson.build
src/chl/: CMakeLists.txt  ch_arr_dbl.h  ch_xs_coords.c  ch_xs_def.c  ch_xs_def.test.cpp  ch_xs_subdiv.c  ch_xs_subdiv.test.cpp  ch_xs_subsect.c
src/chulengo/: chlib.py
src/chulengo/reach/: node.py
tests/: meson.build  testxscoords.c
