[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "chulengo"
version = "0.0.1"
readme = "README.md"
license.file = "LICENSE"
dependencies = ["matplotlib", "numpy"]

[project.optional-dependencies]
dev = ["build", "mypy", "nox"]
docs = ["sphinx", "sphinx-autodoc-typehints"]
nb = ["notebook", "ipykernel"]

[tool.scikit-build]
cmake.verbose = true
cmake.build-type = "Release"
logging.level = "INFO"
sdist.exclude = [
    "examples/",
    ".vscode/",
    ".clang-format",
    ".clang-tidy",
    ".gitattributes",
    ".gitignore",
    "src/chulengo/lib/*",
]
sdist.include = ["external/chl/CMakeLits.txt", "external/chl/src"]
